{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 19,
  "lineage": "c97ca8ff-8d47-78b6-ab74-a5f355bebf1f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712972998930:internet-gateway/igw-0c0fbbc39025d8de7",
            "id": "igw-0c0fbbc39025d8de7",
            "owner_id": "712972998930",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-0cfb649438fd548e2"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712972998930:route-table/rtb-0576089d50a2d4f6c",
            "id": "rtb-0576089d50a2d4f6c",
            "owner_id": "712972998930",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0fbbc39025d8de7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cfb649438fd548e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eda693b500ad240",
            "route_table_id": "rtb-0576089d50a2d4f6c",
            "subnet_id": "subnet-086e1ccc7e185046e"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e015f8fc7a09b165",
            "route_table_id": "rtb-0576089d50a2d4f6c",
            "subnet_id": "subnet-0d5d8171680af84fb"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.demo",
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712972998930:security-group/sg-088e96499a511cc9f",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088e96499a511cc9f",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "712972998930",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "tags_all": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cfb649438fd548e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "175.107.239.208/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2223885306",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-088e96499a511cc9f",
            "security_group_rule_id": "sgr-0bcf27bf27d39503e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.demo",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712972998930:subnet/subnet-086e1ccc7e185046e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086e1ccc7e185046e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712972998930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0cfb649438fd548e2"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712972998930:subnet/subnet-0d5d8171680af84fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5d8171680af84fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "712972998930",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "vpc_id": "vpc-0cfb649438fd548e2"
          },
          "dependencies": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:712972998930:vpc/vpc-0cfb649438fd548e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04167c13748f06d7a",
            "default_route_table_id": "rtb-0ff1e9b6c87fed883",
            "default_security_group_id": "sg-00a05370b85251d13",
            "dhcp_options_id": "dopt-085c9890cda99e547",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cfb649438fd548e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ff1e9b6c87fed883",
            "owner_id": "712972998930",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/terraform-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}